--- a/css/styles.css
+++ b/css/styles.css
@@ -1,28 +1,34 @@
 /** Global
  ********************************************************** */
-* {font-family:consolas, deja vu, arial, tahoma;margin:0;border:0;padding:0;}
-body {margin:20px;background:url(../images/this-is-a-free-plugin.png) no-repeat top right #e1e1e1;}
+* {font-family:'Rosario',consolas, deja vu, arial, tahoma;margin:0;border:0;padding:0;}
+body {margin:20px;background:url(../images/background.gif) repeat top right #e1e1e1;}
 a {outline:none;color:#004488;}
 a img, img {border:0}
 
 p {margin:0 0 10px 0;letter-spacing:-1px;font-size:14px;}
 h2 {letter-spacing:-2px;margin:15px 0 10px 0;color:#333;font-weight:normal;}
 
+/** Page
+ ********************************************************** */
+#page {background:url(../images/this-is-a-free-plugin.png) no-repeat top right;}
+
 /** Header
  ********************************************************** */
-#header {}
-#header h1 {font:bold 48px consolas, deja vu,arial;color:#006699;margin:0 0 10px 0;letter-spacing:2px;text-shadow:#fff 1px 1px 1px;text-decoration:underline;
-background:url(../images/logo.gif) no-repeat left top;width:320px;height:105px;overflow:hidden;text-indent:-9999em;margin-left:-15px;}
+#header {float:left;width:100%;}
+#header h1 {margin:0 0 10px 0;letter-spacing:2px;text-decoration:underline;
+background:url(../images/logo.png) no-repeat left top;width:320px;height:105px;overflow:hidden;text-indent:-9999em;margin-left:-15px;float:left;}
 #header h1 a {width:320px;height:105px;overflow:hidden;text-indent:-9999em;float:left;}
-#header p {font-weight:bold;font-size:18px;}
+#header p {font-weight:bold;font-size:30px;float:left;padding:23px ;letter-spacing:0;font-family:'Gloria Hallelujah';}
 
 /** Content
  ********************************************************** */
-.border_box {background:#000;padding:10px;float:left;margin:0 0 10px 0;}
+.border_box {background:#000;padding:1px;float:left;margin:0 0 10px 0;
+	-moz-box-shadow:#000 0 0 5px;
+}
 
 #examples {background:#fff;padding:5px;border:1px solid #999;}
-#examples h2 {margin:0 0 5px 0;font:bold 20px consolas,arial;letter-spacing:-1px;background:#eee;padding:5px;color:#003366;}
-#examples h3 {float:left;width:120px;height:90px;margin:0 0 0 5px;font:normal 16px consolas,arial;color:#993300;letter-spacing:-1px;}
+#examples h2 {margin:0 0 5px 0;font-weight:bold;font-size:20px;letter-spacing:-1px;background:#eee;padding:5px;color:#003366;}
+#examples h3 {float:left;width:120px;height:90px;margin:0 0 0 5px;font-weight:normal;font-size:16px;color:#993300;letter-spacing:-1px;}
 
 #cube {background:url(../images/thumb-1.gif) no-repeat left bottom;}
 #tube {background:url(../images/thumb-2.gif) no-repeat left bottom;}
@@ -34,96 +40,59 @@ background:url(../images/logo.gif) no-repeat left top;width:320px;height:105px;o
 
 .label_skitter {z-index:150;position:absolute;bottom:0px;left:0px;background:url(../images/back-box-label-black.png) repeat-x left top;color:#fff;display:none;border-top:1px solid #000;}
 .label_skitter p {padding:10px;margin:0;font:normal 22px arial,tahoma;letter-spacing:-1px;}
+.info_slide * {font-family:Consolas,arial,tahoma !important;}
 
-#skitter_fixed {position:fixed;right:20px;top:20px;padding:5px;background:#000;z-index:1000;color:#fff;-moz-box-shadow:#000 0 0 10px;-webkit-box-shadow:#000 0 0 10px;box-shadow:#000 0 0 10px;}
+#skitter_fixed {position:fixed;right:20px;top:20px;padding:5px;background:#000;z-index:1000;color:#fff;}
 
 #download {margin:10px 0 20px 0;height:55px;}
 #botao_download {float:left;margin:0 20px 0 -6px;}
+#botao_wp {float:left;margin:0 20px 0 -6px;}
+#botao_helper {float:left;margin:0 20px 0 -6px;}
 #donate {float:left;}
 
-#options h3 {font:bold 26px consolas,arial;color:#000;}
-#options dt {font:bold 18px consolas,arial;border-bottom:1px dashed #333;margin:10px 0 5px 0;color:#004499;}
-#options dd {font:normal 12px consolas,arial,tahoma;padding:0 0 0 10px;margin:0 0 4px 0;}
+#options h3 {font-weight:bold;font-size:26px;color:#000;}
+#options dt {font-weight:bold;font-size:18px;border-bottom:1px dashed #333;margin:10px 0 5px 0;color:#004499;}
+#options dd {font-size:12px;padding:0 0 0 10px;margin:0 0 4px 0;}
 #options dd.description {font-size:14px;}
 #options dd.default {color:#555;font-style:italic;padding:0 0 0 20px;}
 #options dd.example {color:#cc0000;padding:0 0 0 20px;}
 #options dd.example span {border:1px solid #003300;background:#007744;color:#fff;-moz-border-radius:10px;-webkit-border-radius:10px;border-radius:10px;padding:1px 5px;}
 
 #options table {width:100%;border-collapse:collapse;border:1px solid #333;margin:20px 0;}
-#options table th {background:#333;color:#fff;text-shadow:#000 1px 1px 1px;padding:10px;text-align:left;}
+#options table th {background:#333;color:#fff;padding:10px;text-align:left;}
 #options table th:nth-child(2n) { background:#222; }
-#options table td {padding:5px;background:#fff;font-size:12px;}
+#options table td {padding:5px;background:#fff;font-size:14px;}
 #options table tr:nth-child(2n) td { background:#ddd; }
 #options table td:nth-child(3) {font-style:italic;color:#555;}
 #options table td span.code {color:#000;}
 
-#examples-animations {float:left;width:100%;}
+#examples-animations {float:left;width:100%;margin-top:10px;}
 #examples-animations div {width:800px;}
-#examples-animations a {background:#ccc;float:left;margin:0 5px 5px 0;padding:5px;-moz-border-radius:3px;-webkit-border-radius:3px;border-radius:3px;text-decoration:none;border:1px solid #bbb;
-	color:#000;
-	-moz-box-shadow:#555 1px 1px 0px;
-	-webkit-box-shadow:#555 1px 1px 0px;
-	box-shadow:#555 1px 1px 0px;
-	text-shadow:#fff 1px 1px 1px;
-}
-#examples-animations a:hover {position:relative;
-	background:#ddd;
-	border:1px solid #999;
-}
-#examples-animations a.selected {background:#333;color:#fff;border:1px solid #000;
-	background:#333;
-	text-shadow:none;
-}
+#examples-animations a {background:#ccc;float:left;margin:0 5px 5px 0;padding:5px;-moz-border-radius:3px;-webkit-border-radius:3px;border-radius:3px;text-decoration:none;border:1px solid #bbb;color:#000;}
+#examples-animations a:hover {position:relative;background:#aaa;border:1px solid #777;}
+#examples-animations a.selected {background:#333;color:#fff;border:1px solid #000;background:#333;text-shadow:none;}
+#examples-animations a .new_animation {font:bold 11px arial,tahoma;color:#fff;padding:2px 5px;border:1px solid #000; background:#cc0000; -moz-border-radius:5px; -webkit-border-radius:5px; border-radius:5px; float:right;margin-left:5px;}
 
 #styles_navigation {height:100px;}
 #styles_navigation h2 {}
 #styles_navigation ul {list-style:none;}
 #styles_navigation ul li {float:left;position:relative;}
-#styles_navigation ul li a {background:#ccc;float:left;margin:0 15px 15px 0;padding:5px 15px;-moz-border-radius:6px;-webkit-border-radius:6px;border-radius:6px;text-decoration:none;border:1px solid #bbb;
-	color:#000;
-	-moz-box-shadow:#555 1px 1px 0px;
-	-webkit-box-shadow:#555 1px 1px 0px;
-	box-shadow:#555 1px 1px 0px;
-	text-shadow:#fff 1px 1px 1px;
-	font:normal 26px consolas,arial;
-	letter-spacing:-2px;
-}
+#styles_navigation ul li a {background:#ccc;float:left;margin:0 15px 15px 0;padding:5px 15px;-moz-border-radius:6px;-webkit-border-radius:6px;border-radius:6px;text-decoration:none;border:1px solid #bbb;color:#000;font-weight:bold;font-size:26px;letter-spacing:-2px;}
 
-#styles_navigation ul li a:hover {
-	background:#ddd;
-	border:1px solid #999;
-}
-#styles_navigation ul li a.selected {
-	background:#333;
-	text-shadow:#000 1px 1px 1px;
-	font-weight:normal;
-	color:#fff;
-	border:1px solid #000;
-}
+#styles_navigation ul li a:hover {background:#aaa;border:1px solid #777;}
+#styles_navigation ul li a.selected {background:#333; font-weight:normal; color:#fff; border:1px solid #000; }
 
-span.new {position:absolute;top:-5px;right:-10px;font:bold 11px arial,tahoma;color:#fff;padding:2px 5px;border:1px solid #000;
-	background:#cc0000;
-	-moz-border-radius:5px;
-	-webkit-border-radius:5px;
-	border-radius:5px;
-	-moz-box-shadow:#999 0 0 2px;
-	-webkit-box-shadow:#999 0 0 2px;
-	box-shadow:#999 0 0 2px;
-}
+span.new {position:absolute;top:-5px;right:-10px;font:bold 11px arial,tahoma;color:#fff;padding:2px 5px;border:1px solid #000; background:#cc0000; -moz-border-radius:5px; -webkit-border-radius:5px; border-radius:5px; }
 
-span.update {position:absolute;top:-5px;right:-25px;font:bold 11px arial,tahoma;color:#fff;padding:2px 5px;border:1px solid #000;
-	background:#006600;
-	-moz-border-radius:5px;
-	-webkit-border-radius:5px;
-	border-radius:5px;
-	-moz-box-shadow:#999 0 0 2px;
-	-webkit-box-shadow:#999 0 0 2px;
-	box-shadow:#999 0 0 2px;
-}
+span.update {position:absolute;top:-5px;right:-25px;font:bold 11px arial,tahoma;color:#fff;padding:2px 5px;border:1px solid #000; background:#006600; -moz-border-radius:5px; -webkit-border-radius:5px; border-radius:5px; }
 
-#updatelog {background:#fff;padding:10px;border-top:5px solid #333;}
-#updatelog dl dt {border-bottom:1px solid #ccc;font:bold 16px consolas,arial,tahoma,sans;margin-top:5px;}
-#updatelog dl dd {font:normal 12px consolas,arial,tahoma,sans;}
+#updatelog {background:#fff;padding:0 10px 10px 10px ;border-top:5px solid #333;}
+#updatelog dl dt {border-bottom:1px solid #ccc;font-weight:bold;font-size:18px;margin:10px 0 5px 0;}
+#updatelog dl dd {font-weight:normal;font-size:14px;}
+
+.highlight *, .code {font-family:Consolas,arial,tahoma !important;}
+
+#box_share {}
 
 /** Footer
  ********************************************************** */
