--- a/css/styles.css
+++ b/css/styles.css
@@ -1,112 +1,161 @@
-/** Global
- ********************************************************** */
-* {font-family:'Rosario',consolas, deja vu, arial, tahoma;margin:0;border:0;padding:0;}
-body {margin:20px;background:url(../images/background.gif) repeat top right #e1e1e1;}
-a {outline:none;color:#004488;}
-a img, img {border:0}
+* { margin:0; padding:0; list-style:none; }
 
-p {margin:0 0 10px 0;letter-spacing:-1px;font-size:14px;}
-h2 {letter-spacing:-2px;margin:15px 0 10px 0;color:#333;font-weight:normal;}
+body { background:url(../images/bg-page.png) repeat left top; font-family:'Mako',arial,tahoma; }
 
-/** Page
- ********************************************************** */
-#page {background:url(../images/this-is-a-free-plugin.png) no-repeat top right;min-width:1050px;}
+a, a img { border:none; outline:none; color:#004499; }
 
-/** Header
- ********************************************************** */
-#header {float:left;width:100%;}
-#header h1 {margin:0 0 10px 0;letter-spacing:2px;text-decoration:underline;
-background:url(../images/logo.png) no-repeat left top;width:320px;height:105px;overflow:hidden;text-indent:-9999em;margin-left:-15px;float:left;}
-#header h1 a {width:320px;height:105px;overflow:hidden;text-indent:-9999em;float:left;}
-#header p {font-weight:bold;font-size:30px;float:left;padding:23px ;letter-spacing:0;font-family:'Gloria Hallelujah';}
+.content-width { width:980px; margin:0 auto; }
+.clear { clear:both; }
 
-/** Content
- ********************************************************** */
-#content {float:left;width:100%;}
+#page { background:url(../images/bg-header-repeat.png) repeat-x left top; margin-bottom:50px; }
 
-.border_box {background:#000;padding:1px;
-	box-shadow:#000 0 0 5px;
-	-o-box-shadow:#000 0 0 5px;
-	-moz-box-shadow:#000 0 0 5px;
-	-webkit-box-shadow:#000 0 0 5px;
-	margin:0 0 10px 0;
-	width:800px;
-	height:300px;
+#header { height:110px; background:url(../images/bg-header.png) no-repeat center top; margin:0 auto; margin-bottom:20px; }
+#header h1 a { width:220px; height:90px; float:left; margin:0px 0 0 0; overflow:hidden; text-indent:-9999em; background:url(../images/logo.png) no-repeat center top;  }
+
+#header nav { float:right; margin:30px 0 0 0; }
+#header nav a { color:#fff; padding:10px 25px; -moz-border-radius:3px;-webkit-border-radius:3px;border-radius:3px; float:left; margin:0 15px 0 0; text-decoration:none; text-shadow:#000 1px 1px 0; 
+	-moz-transition:all ease-out 0.3s;
+	-webkit-transition:all ease-out 0.3s;
+	transition:all ease-out 0.3s;
+	position:relative;
+	z-index:5;
 }
 
-#examples {background:#fff;padding:5px;border:1px solid #999;}
-#examples h2 {margin:0 0 5px 0;font-weight:bold;font-size:20px;letter-spacing:-1px;background:#eee;padding:5px;color:#003366;}
-#examples h3 {float:left;width:120px;height:90px;margin:0 0 0 5px;font-weight:normal;font-size:16px;color:#993300;letter-spacing:-1px;}
+#header nav a:hover, #header nav a.active { background:#000; /*box-shadow:rgba(255,255,255,0.3) 0 0 10px;*/ }
 
-#cube {background:url(../images/thumb-1.gif) no-repeat left bottom;}
-#tube {background:url(../images/thumb-2.gif) no-repeat left bottom;}
-#block {background:url(../images/thumb-3.gif) no-repeat left bottom;}
-#cubeStop {background:url(../images/thumb-4.gif) no-repeat left bottom;}
-#cubeHide {background:url(../images/thumb-5.gif) no-repeat left bottom;}
-#cubeSize {background:url(../images/thumb-6.gif) no-repeat left bottom;}
-#horizontal {background:url(../images/thumb-7.gif) no-repeat left bottom;}
+#bt-lang { width:40px; height:40px; position:absolute; overflow:hidden; text-indent:-9999em; background:url(../images/bt-lang.png) no-repeat center top; right:0; top:0; -moz-transition:opacity 0.2s; }
+#bt-lang:hover { opacity:0.7; }
 
-#skitter_fixed {position:fixed;right:20px;top:20px;padding:5px;background:#000;z-index:1000;color:#fff;}
+#box-languages { position:absolute; top:40px; right:0; background:#000; width:40px; z-index:250; -moz-border-radius:0 0 0 3px;-webkit-border-radius:0 0 0 3px;border-radius:0 0 0 3px; display:none; }
+#box-languages ul { float:left; margin-top:3px; width:40px; padding:0; }
+#box-languages ul li { float:left; margin-bottom:0px; width:40px; text-align:center; padding:0; }
+#box-languages ul li a { float:left; margin-left:4px; }
+#box-languages ul li a img { float:left; }
 
-#download {margin:10px 0 20px 0;height:55px;}
-#botao_download {float:left;margin:0 20px 0 -6px;}
-#botao_wp {float:left;margin:0 20px 0 -6px;}
-#botao_helper {float:left;margin:0 20px 0 -6px;}
-#donate {float:left;}
+#content {}
 
-#options h3 {font-weight:bold;font-size:26px;color:#000;}
-#options dt {font-weight:bold;font-size:18px;border-bottom:1px dashed #333;margin:10px 0 5px 0;color:#004499;}
-#options dd {font-size:12px;padding:0 0 0 10px;margin:0 0 4px 0;}
-#options dd.description {font-size:14px;}
-#options dd.default {color:#555;font-style:italic;padding:0 0 0 20px;}
-#options dd.example {color:#cc0000;padding:0 0 0 20px;}
-#options dd.example span {border:1px solid #003300;background:#007744;color:#fff;-moz-border-radius:10px;-webkit-border-radius:10px;border-radius:10px;padding:1px 5px;}
+/* =Pages
+-------------------------------------------------------------- */
+.page { display:none; }
+.page.active { display:block; }
 
-#options table {width:100%;border-collapse:collapse;border:1px solid #333;margin:20px 0;}
-#options table th {background:#333;color:#fff;padding:10px;text-align:left;}
-#options table th:nth-child(2n) { background:#222; }
-#options table td {padding:5px;background:#fff;font-size:14px;}
-#options table tr:nth-child(2n) td { background:#ddd; }
-#options table td:nth-child(3) {font-style:italic;color:#555;}
-#options table td span.code {color:#000;}
+.page h1 { font-size:36px; margin-bottom:20px; letter-spacing:-2px; }
+.page h2 { margin-bottom:20px; color:#777; }
+.page h3 { margin-bottom:20px; color:#999; }
 
-#examples-animations {float:left;width:100%;margin-top:10px;}
-#examples-animations div {width:800px;}
-#examples-animations a {background:#ccc;float:left;margin:0 5px 5px 0;padding:5px;-moz-border-radius:3px;-webkit-border-radius:3px;border-radius:3px;text-decoration:none;border:1px solid #bbb;color:#000;}
-#examples-animations a:hover {position:relative;background:#aaa;border:1px solid #777;}
-#examples-animations a.selected {background:#333;color:#fff;border:1px solid #000;background:#333;text-shadow:none;}
-#examples-animations a .new_animation {font:bold 11px arial,tahoma;color:#fff;padding:2px 5px;border:1px solid #000; background:#cc0000; -moz-border-radius:5px; -webkit-border-radius:5px; border-radius:5px; float:right;margin-left:5px;}
+/* =Configurations
+-------------------------------------------------------------- */
 
-#styles_navigation {height:100px;}
-#styles_navigation h2 {}
-#styles_navigation ul {list-style:none;}
-#styles_navigation ul li {float:left;position:relative;}
-#styles_navigation ul li a {background:#ccc;float:left;margin:0 15px 15px 0;padding:5px 15px;-moz-border-radius:6px;-webkit-border-radius:6px;border-radius:6px;text-decoration:none;border:1px solid #bbb;color:#000;font-weight:bold;font-size:26px;letter-spacing:-2px;}
+#box-bts-config { position:relative; }
 
-#styles_navigation ul li a:hover {background:#aaa;border:1px solid #777;}
-#styles_navigation ul li a.selected {background:#333; font-weight:normal; color:#fff; border:1px solid #000; }
+.bt-config { background:url(../images/bt-config.png) no-repeat center top; width:120px; height:120px; text-align:center; position:relative; z-index:5; text-indent:-9999em; overflow:hidden; display:block; margin:0 auto; }
 
-span.new {position:absolute;top:-5px;right:-10px;font:bold 11px arial,tahoma;color:#fff;padding:2px 5px;border:1px solid #000; background:#cc0000; -moz-border-radius:5px; -webkit-border-radius:5px; border-radius:5px; z-index:1; }
+#box-config { background:url(../images/bg-config.jpg) repeat left top; margin-top:-60px; padding-bottom:10px; color:#fff; float:left; width:100%; display:none; }
 
-span.update {position:absolute;top:-5px;right:-25px;font:bold 11px arial,tahoma;color:#fff;padding:2px 5px;border:1px solid #000; background:#006600; -moz-border-radius:5px; -webkit-border-radius:5px; border-radius:5px; }
-
-#updatelog {background:#fff;padding:0 10px 10px 10px ;border-top:5px solid #333;}
-#updatelog dl dt {border-bottom:1px solid #ccc;font-weight:bold;font-size:18px;margin:10px 0 5px 0;}
-#updatelog dl dt {font-weight:normal;font-size:14px;}
-#updatelog dl dt.through {text-decoration:line-through;color:#555;}
-
-.highlight *, .code {font-family:Consolas,arial,tahoma !important;}
-
-#box_share {}
-
-#donate-banner {position:absolute;bottom:400px;left:679px;width:336px;height:310px;background:#ddd;border-radius:5px;box-shadow:#333 0 0 3px;padding:10px;
-	background:-moz-linear-gradient(-90deg, #ddd, #f1f1f1);
-	background:-webkit-linear-gradient(-90deg, #ddd, #f1f1f1);
+#nav-config { float:left; margin:60px 0 20px 190px; }
+#nav-config a { float:left; padding:10px 20px; border-bottom:5px solid #333; color:#fff; text-decoration:none; text-shadow:none; 
+	-moz-transition:all 0.2s; 
 }
-#donate-banner h3 {font-size:18px;font-weight:bold;margin-bottom:5px;font-style:italic;text-shadow:#fff 1px 1px 0;}
+#nav-config a:hover { text-shadow:#000 0 0 5px; border-color:#555; }
+#nav-config a.active { border-color:#228822; }
 
-/** Footer
- ********************************************************** */
-#footer {clear:both;margin-top:20px;}
-#footer p {text-indent:-9999em;overflow:hidden;}
-#footer p a {background:url(../images/logo-thiago.png) no-repeat left top;width:50px;height:40px;float:right;}
+.back-nav { background:#000; position:absolute; z-index:4; }
+
+#box-all-config { float:left; width:100%; position:relative; margin-bottom:10px; }
+#box-all-config .item-config { display:none; position:absolute; top:0; left:0; }
+#box-all-config .item-config.active { display:block !important; }
+#box-animations {}
+
+#bt-apply { position:absolute; top:32px; right:0px; text-indent:-9999em; overflow:hidden; width:64px; height:64px; background:url(../images/bt-apply.png) no-repeat left top; display:none; }
+#bt-apply:hover { background:url(../images/bt-apply-over.png) no-repeat left top; }
+
+#box-your-code {}
+#box-your-code pre { background:#111; padding:30px; -moz-border-radius:3px;-webkit-border-radius:33px;border-radius:3px; font:14px consolas,'courier new'; padding-left:80px; }
+
+#bt-up { position:fixed; top: 50%; right:50px; width:100px; height:100px; opacity:0.2; background:url(../images/bt-up.png) no-repeat left top; text-indent:-9999em; overflow:hidden; cursor:pointer; }
+
+/* =Buttons
+-------------------------------------------------------------- */
+.list-buttons {}
+.list-buttons li { position:relative; float:left; }
+.list-buttons li a { float:left; padding:10px 20px; background:#111; color:#fff; text-decoration:none; font-size:14px; -moz-border-radius:3
+px;-webkit-border-radius:3px;border-radius:3px; margin:0 10px 10px 0; }
+.list-buttons li a:hover { background:#000; }
+.list-buttons li a.new { background:#991100; }
+.list-buttons li a.new:hover { background:#aa1100; }
+
+.list-buttons li a.active { background:#228822; }
+.list-buttons li a.active:hover { background:#009922; }
+
+.list-select { display:none; position:absolute; top:0; left:0; -moz-border-radius:3px;-webkit-border-radius:3px;border-radius:3px; padding:3px 0; background:#111; z-index:10; border:1px solid #000; box-shadow:#333 0 0 5px; width:120px; }
+.list-select li { width:120px; }
+.list-select li a { padding:5px 10px; width:100px; margin:0; -moz-border-radius:0px;-webkit-border-radius:0px;border-radius:0px; }
+
+/* =Footer
+-------------------------------------------------------------- */
+#footer { position:fixed; bottom:0; left:0; width:100%;height:50px; z-index:200; }
+#credits { float:left; margin:2px 0 0 5px; text-indent:-9999em; overflow:hidden; width:42px; height:42px; background:url(../images/logo-thiago.png) no-repeat left top; position:relative; z-index:10; }
+#footer section { float:right; margin:15px 15px 0 0; position:relative; z-index:10;  }
+#back-footer { position:absolute; z-index:9; background:url(../images/bg-page.png) repeat left top;opacity:0.8; width:100%; height:50px; }
+
+/* =Skitter
+-------------------------------------------------------------- */
+.border-skitter { margin:0px auto; border:1px solid #000; width:800px; height:300px; background:#333; margin-bottom:40px; -moz-box-shadow:rgba(0,0,0,0.5) 0 0 10px; }
+
+/* =Documentation
+-------------------------------------------------------------- */
+#page-documentation {}
+#page-documentation dl { margin-bottom:30px; float:left; width:100%; }
+#page-documentation dl dt { font-size:26px; color:#cc3333; font-weight:bold; }
+#page-documentation dl dd p.definition-description { font-size:16px; margin-bottom:10px; }
+#page-documentation dl dd p { font-size:14px; margin-bottom:2px; float:left; width:100%; }
+#page-documentation dl dd p strong { float:left; width:60px; background:#333; color:#fff; padding:2px 5px; margin-right:10px; -moz-border-radius:3px;-webkit-border-radius:3px;border-radius:3px; font-weight:normal; font-size:12px; text-align:right; }
+
+#page-documentation dl dd p span { margin-left:85px; display:block; }
+
+#page-documentation dl dd p.dd-default {  }
+#page-documentation dl dd p.dd-accept {  }
+#page-documentation dl dd p.dd-code { font-family:consolas,'courier new'; font-size:12px; }
+
+/* =Updatelog
+-------------------------------------------------------------- */
+#box-updatelog {  }
+#box-updatelog dl { float:left; width:100%; margin-top:-30px; }
+#box-updatelog dl dt { font-size:26px; color:#cc3333; font-weight:bold; margin-top:30px;  }
+#box-updatelog dl dd { font-size:14px; margin-bottom:2px; }
+
+/* =Download
+-------------------------------------------------------------- */
+#box-download { margin:0 auto; width:580px; margin-top:50px; }
+#box-download a { -moz-transition:color 0.2s; }
+#box-download a:hover { color:#999; text-decoration:underline; }
+
+.bt-download-big { width:200px; text-align:center; float:left; margin:0 50px; }
+.bt-download-big a { font-size:18px; font-weight:bold; color:#000; text-decoration:none; position:relative; }
+
+.bt-download-small { width:140px; text-align:center; float:left; margin-top:30px; }
+.bt-download-small a { font-size:14px; color:#000; text-decoration:none; position:relative; }
+
+#bt-download-wp { width:140px; height:140px; background:url(../images/bt-download-wp.png) no-repeat left top; text-indent:-9999em; overflow:hidden; cursor:pointer; float:left; }
+
+#bt-download-helper { width:140px; height:140px; background:url(../images/bt-download-helper.png) no-repeat left top; text-indent:-9999em; overflow:hidden; cursor:pointer; float:left; }
+
+#bt-download-stable { width:200px; height:200px; background:url(../images/bt-download-stable.png) no-repeat left top; text-indent:-9999em; overflow:hidden; cursor:pointer; float:left; }
+
+#box-banner-help { float:left; width:100%; }
+#banner-help { width:728px; margin:0 auto; /*margin-top:100px;*/ margin-top:50px;  }
+#banner-help p { font-size:14px; color:#000; margin-bottom:5px; }
+#banner-help div { /*background:#000;*/ width:728px; height:90px; }
+
+/* =Comments
+-------------------------------------------------------------- */
+#box-comments {  }
+
+/* =Multiple
+-------------------------------------------------------------- */
+#page-multiple {}
+#page-multiple .border_box { margin-bottom:50px; }
+
+/* =Donate
+-------------------------------------------------------------- */
+#box-donate { float: left; width: 100%; text-align: center; margin: 40px 0 0 0; }
