Added animation option labels

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,161 +1,9 @@
-* { margin:0; padding:0; list-style:none; }
+* { margin:0; padding: 0; list-style: none; }
+body { font-family: Arial,Tahoma; color:#333; background: #eee; }
 
-body { background:url(../images/bg-page.png) repeat left top; font-family:'Mako',arial,tahoma; }
-
-a, a img { border:none; outline:none; color:#004499; }
-
-.content-width { width:980px; margin:0 auto; }
-.clear { clear:both; }
-
-#page { background:url(../images/bg-header-repeat.png) repeat-x left top; margin-bottom:50px; }
-
-#header { height:110px; background:url(../images/bg-header.png) no-repeat center top; margin:0 auto; margin-bottom:20px; }
-#header h1 a { width:220px; height:90px; float:left; margin:0px 0 0 0; overflow:hidden; text-indent:-9999em; background:url(../images/logo.png) no-repeat center top;  }
-
-#header nav { float:right; margin:30px 0 0 0; }
-#header nav a { color:#fff; padding:10px 25px; -moz-border-radius:3px;-webkit-border-radius:3px;border-radius:3px; float:left; margin:0 15px 0 0; text-decoration:none; text-shadow:#000 1px 1px 0; 
-	-moz-transition:all ease-out 0.3s;
-	-webkit-transition:all ease-out 0.3s;
-	transition:all ease-out 0.3s;
-	position:relative;
-	z-index:5;
-}
-
-#header nav a:hover, #header nav a.active { background:#000; /*box-shadow:rgba(255,255,255,0.3) 0 0 10px;*/ }
-
-#bt-lang { width:40px; height:40px; position:absolute; overflow:hidden; text-indent:-9999em; background:url(../images/bt-lang.png) no-repeat center top; right:0; top:0; -moz-transition:opacity 0.2s; }
-#bt-lang:hover { opacity:0.7; }
-
-#box-languages { position:absolute; top:40px; right:0; background:#000; width:40px; z-index:250; -moz-border-radius:0 0 0 3px;-webkit-border-radius:0 0 0 3px;border-radius:0 0 0 3px; display:none; }
-#box-languages ul { float:left; margin-top:3px; width:40px; padding:0; }
-#box-languages ul li { float:left; margin-bottom:0px; width:40px; text-align:center; padding:0; }
-#box-languages ul li a { float:left; margin-left:4px; }
-#box-languages ul li a img { float:left; }
-
-#content {}
-
-/* =Pages
--------------------------------------------------------------- */
-.page { display:none; }
-.page.active { display:block; }
-
-.page h1 { font-size:36px; margin-bottom:20px; letter-spacing:-2px; }
-.page h2 { margin-bottom:20px; color:#777; }
-.page h3 { margin-bottom:20px; color:#999; }
-
-/* =Configurations
--------------------------------------------------------------- */
-
-#box-bts-config { position:relative; }
-
-.bt-config { background:url(../images/bt-config.png) no-repeat center top; width:120px; height:120px; text-align:center; position:relative; z-index:5; text-indent:-9999em; overflow:hidden; display:block; margin:0 auto; }
-
-#box-config { background:url(../images/bg-config.jpg) repeat left top; margin-top:-60px; padding-bottom:10px; color:#fff; float:left; width:100%; display:none; }
-
-#nav-config { float:left; margin:60px 0 20px 190px; }
-#nav-config a { float:left; padding:10px 20px; border-bottom:5px solid #333; color:#fff; text-decoration:none; text-shadow:none; 
-	-moz-transition:all 0.2s; 
-}
-#nav-config a:hover { text-shadow:#000 0 0 5px; border-color:#555; }
-#nav-config a.active { border-color:#228822; }
-
-.back-nav { background:#000; position:absolute; z-index:4; }
-
-#box-all-config { float:left; width:100%; position:relative; margin-bottom:10px; }
-#box-all-config .item-config { display:none; position:absolute; top:0; left:0; }
-#box-all-config .item-config.active { display:block !important; }
-#box-animations {}
-
-#bt-apply { position:absolute; top:32px; right:0px; text-indent:-9999em; overflow:hidden; width:64px; height:64px; background:url(../images/bt-apply.png) no-repeat left top; display:none; }
-#bt-apply:hover { background:url(../images/bt-apply-over.png) no-repeat left top; }
-
-#box-your-code {}
-#box-your-code pre { background:#111; padding:30px; -moz-border-radius:3px;-webkit-border-radius:33px;border-radius:3px; font:14px consolas,'courier new'; padding-left:80px; }
-
-#bt-up { position:fixed; top: 50%; right:50px; width:100px; height:100px; opacity:0.2; background:url(../images/bt-up.png) no-repeat left top; text-indent:-9999em; overflow:hidden; cursor:pointer; }
-
-/* =Buttons
--------------------------------------------------------------- */
-.list-buttons {}
-.list-buttons li { position:relative; float:left; }
-.list-buttons li a { float:left; padding:10px 20px; background:#111; color:#fff; text-decoration:none; font-size:14px; -moz-border-radius:3
-px;-webkit-border-radius:3px;border-radius:3px; margin:0 10px 10px 0; }
-.list-buttons li a:hover { background:#000; }
-.list-buttons li a.new { background:#991100; }
-.list-buttons li a.new:hover { background:#aa1100; }
-
-.list-buttons li a.active { background:#228822; }
-.list-buttons li a.active:hover { background:#009922; }
-
-.list-select { display:none; position:absolute; top:0; left:0; -moz-border-radius:3px;-webkit-border-radius:3px;border-radius:3px; padding:3px 0; background:#111; z-index:10; border:1px solid #000; box-shadow:#333 0 0 5px; width:120px; }
-.list-select li { width:120px; }
-.list-select li a { padding:5px 10px; width:100px; margin:0; -moz-border-radius:0px;-webkit-border-radius:0px;border-radius:0px; }
-
-/* =Footer
--------------------------------------------------------------- */
-#footer { position:fixed; bottom:0; left:0; width:100%;height:50px; z-index:200; }
-#credits { float:left; margin:2px 0 0 5px; text-indent:-9999em; overflow:hidden; width:42px; height:42px; background:url(../images/logo-thiago.png) no-repeat left top; position:relative; z-index:10; }
-#footer section { float:right; margin:15px 15px 0 0; position:relative; z-index:10;  }
-#back-footer { position:absolute; z-index:9; background:url(../images/bg-page.png) repeat left top;opacity:0.8; width:100%; height:50px; }
-
-/* =Skitter
--------------------------------------------------------------- */
-.border-skitter { margin:0px auto; border:1px solid #000; width:800px; height:300px; background:#333; margin-bottom:40px; -moz-box-shadow:rgba(0,0,0,0.5) 0 0 10px; }
-
-/* =Documentation
--------------------------------------------------------------- */
-#page-documentation {}
-#page-documentation dl { margin-bottom:30px; float:left; width:100%; }
-#page-documentation dl dt { font-size:26px; color:#cc3333; font-weight:bold; }
-#page-documentation dl dd p.definition-description { font-size:16px; margin-bottom:10px; }
-#page-documentation dl dd p { font-size:14px; margin-bottom:2px; float:left; width:100%; }
-#page-documentation dl dd p strong { float:left; width:60px; background:#333; color:#fff; padding:2px 5px; margin-right:10px; -moz-border-radius:3px;-webkit-border-radius:3px;border-radius:3px; font-weight:normal; font-size:12px; text-align:right; }
-
-#page-documentation dl dd p span { margin-left:85px; display:block; }
-
-#page-documentation dl dd p.dd-default {  }
-#page-documentation dl dd p.dd-accept {  }
-#page-documentation dl dd p.dd-code { font-family:consolas,'courier new'; font-size:12px; }
-
-/* =Updatelog
--------------------------------------------------------------- */
-#box-updatelog {  }
-#box-updatelog dl { float:left; width:100%; margin-top:-30px; }
-#box-updatelog dl dt { font-size:26px; color:#cc3333; font-weight:bold; margin-top:30px;  }
-#box-updatelog dl dd { font-size:14px; margin-bottom:2px; }
-
-/* =Download
--------------------------------------------------------------- */
-#box-download { margin:0 auto; width:580px; margin-top:50px; }
-#box-download a { -moz-transition:color 0.2s; }
-#box-download a:hover { color:#999; text-decoration:underline; }
-
-.bt-download-big { width:200px; text-align:center; float:left; margin:0 50px; }
-.bt-download-big a { font-size:18px; font-weight:bold; color:#000; text-decoration:none; position:relative; }
-
-.bt-download-small { width:140px; text-align:center; float:left; margin-top:30px; }
-.bt-download-small a { font-size:14px; color:#000; text-decoration:none; position:relative; }
-
-#bt-download-wp { width:140px; height:140px; background:url(../images/bt-download-wp.png) no-repeat left top; text-indent:-9999em; overflow:hidden; cursor:pointer; float:left; }
-
-#bt-download-helper { width:140px; height:140px; background:url(../images/bt-download-helper.png) no-repeat left top; text-indent:-9999em; overflow:hidden; cursor:pointer; float:left; }
-
-#bt-download-stable { width:200px; height:200px; background:url(../images/bt-download-stable.png) no-repeat left top; text-indent:-9999em; overflow:hidden; cursor:pointer; float:left; }
-
-#box-banner-help { float:left; width:100%; }
-#banner-help { width:728px; margin:0 auto; /*margin-top:100px;*/ margin-top:50px;  }
-#banner-help p { font-size:14px; color:#000; margin-bottom:5px; }
-#banner-help div { /*background:#000;*/ width:728px; height:90px; }
-
-/* =Comments
--------------------------------------------------------------- */
-#box-comments {  }
-
-/* =Multiple
--------------------------------------------------------------- */
-#page-multiple {}
-#page-multiple .border_box { margin-bottom:50px; }
-
-/* =Donate
--------------------------------------------------------------- */
-#box-donate { float: left; width: 100%; text-align: center; margin: 40px 0 0 0; }
+#page { margin: 0 auto; width: 800px; background: #fff; padding:40px; margin-top: 20px; margin-bottom: 20px; border: 1px solid #777; box-shadow: #999 1px 1px 3px; }
+#page h1 { font-weight: normal; font-size: 32px; letter-spacing: -2px; margin:0 0 20px 0; border-bottom: 1px solid #ddd; padding:0 0 10px 0; }
+#page h2 { font-weight: bold; font-size: 22px; letter-spacing: -1px; font-style: italic; margin:40px 0 0 0; }
+#page h3 { float: right; }
+#page h3 a { font-weight: normal; font-size: 16px; color:#004499; }
+#page h3 a:hover { color:#333; }
