--- a/examples/css/styles.css
+++ b/examples/css/styles.css
@@ -18,13 +18,13 @@ body {
   font-size: 64px;
   margin: 0 0 20px 0;
   padding: 0 0 10px 0;
-  text-align: center;
+  text-align: left;
   letter-spacing: -2px;
   color: #444;
 }
 #page h1 small {
   font-weight: normal;
-  font-size: 24px;
+  font-size: 20px;
   display: block;
   color: #999;
   letter-spacing: -1px;
