--- a/scss/skitter.scss
+++ b/scss/skitter.scss
@@ -48,8 +48,6 @@
     overflow: hidden;
     text-indent: -9999em;
     margin-top: -25px;
-    -webkit-transition: all 0.2s;
-    -moz-transition: all 0.2s;
     transition: all 0.2s;
   }
   .next_button {
@@ -62,8 +60,6 @@
     overflow: hidden;
     text-indent: -9999em;
     margin-top: -25px;
-    -webkit-transition: all 0.2s;
-    -moz-transition: all 0.2s;
     transition: all 0.2s;
   }
   .prev_button:hover, .next_button:hover {
@@ -74,37 +70,31 @@
     top: 15px;
     left: 15px;
     z-index: 100;
-    background: #000;
+    background-color: #000;
     color: #fff;
     font: bold 11px arial;
     padding: 5px 0 5px 5px;
-    -moz-border-radius: 5px;
-    -webkit-border-radius: 5px;
     border-radius: 5px;
     opacity: 0.75;
     .image_number {
-      background: #333;
+      background-color: #333;
       float: left;
       padding: 2px 10px;
       margin: 0 5px 0 0;
       cursor: pointer;
-      -moz-border-radius: 2px;
-      -webkit-border-radius: 2px;
       border-radius: 2px;
-      -webkit-transition: all 0.2s;
-      -moz-transition: all 0.2s;
       transition: all 0.2s;
       &:hover {
-        background: #000;
+        background-color: #000;
       }
     }
     .image_number_select {
-      background: #cc3333;
+      background-color: #cc3333;
       float: left;
       padding: 2px 10px;
       margin: 0 5px 0 0;
       &:hover {
-        background: #cc3333;
+        background-color: #cc3333;
         float: left;
         padding: 2px 10px;
         margin: 0 5px 0 0;
@@ -118,8 +108,6 @@
   }
   .info_slide_thumb {
     height: 50px;
-    -moz-border-radius: 0;
-    -webkit-border-radius: 0;
     border-radius: 0;
     overflow: hidden;
     top: auto;
@@ -134,15 +122,18 @@
       position: relative;
       margin: 0 !important;
       padding: 0 !important;
-      -moz-border-radius: 0 !important;
-      -webkit-border-radius: 0 !important;
       border-radius: 0 !important;
-      img {
-        position: absolute;
-        top: -30px;
-        left: -30px;
-        height: 100px;
+      background-size: cover;
+      background-position: center center;
+      &.image_number_select {
+        opacity: .4;
       }
+      // img {
+      //   position: absolute;
+      //   top: -30px;
+      //   left: -30px;
+      //   height: 100px;
+      // }
     }
   }
   .box_scroll_thumbs {
@@ -151,9 +142,7 @@
       position: absolute;
       bottom: 60px;
       left: 50px;
-      background: #ccc;
-      background: -moz-linear-gradient(-90deg, #555, #fff);
-      background: -webkit-gradient(linear, left top, left bottom, from(#555), to(#fff));
+      background-color: #ccc;
       width: 200px;
       height: 10px;
       overflow: hidden;
@@ -168,34 +157,28 @@
     bottom: -40px;
     z-index: 151;
     padding: 5px 0 5px 5px;
-    -moz-border-radius: 50px;
-    -webkit-border-radius: 50px;
     border-radius: 50px;
     .image_number {
-      background: #333;
+      background-color: #333;
       float: left;
       margin: 0 5px 0 0;
       cursor: pointer;
-      -moz-border-radius: 50px;
-      -webkit-border-radius: 50px;
       border-radius: 50px;
       width: 18px;
       height: 18px;
       text-indent: -9999em;
       overflow: hidden;
-      -webkit-transition: all 0.2s;
-      -moz-transition: all 0.2s;
       transition: all 0.2s;
       &:hover {
-        background: #000;
+        background-color: #000;
       }
     }
     .image_number_select {
-      background: #cc3333;
+      background-color: #cc3333;
       float: left;
       margin: 0 5px 0 0;
       &:hover {
-        background: #cc3333;
+        background-color: #cc3333;
         float: left;
         margin: 0 5px 0 0;
       }
@@ -244,7 +227,7 @@
   }
 }
 .progressbar {
-  background: #000;
+  background-color: #000;
   position: absolute;
   top: 5px;
   left: 15px;
@@ -261,10 +244,8 @@
   left: -40px;
   width: 100px;
   height: 100px;
-  background: #fff;
+  background-color: #fff;
   border: 1px solid #222;
-  -moz-box-shadow: rgba(0, 0, 0, 0.7) 2px 2px 5px;
-  -webkit-box-shadow: rgba(0, 0, 0, 0.7) 2px 2px 5px;
   box-shadow: rgba(0, 0, 0, 0.7) 2px 2px 5px;
   overflow: hidden;
   ul {
@@ -306,7 +287,7 @@
   width: 100%;
   z-index: 9998;
   opacity: 1;
-  background: #000;
+  background-color: #000;
 }
 
 .box_skitter {
@@ -320,8 +301,6 @@
     text-indent: -9999em;
     margin-top: -25px;
     opacity: 0;
-    -webkit-transition: all 0.2s;
-    -moz-transition: all 0.2s;
     transition: all 0.2s;
   }
   .play_pause_button {
@@ -334,8 +313,6 @@
     text-indent: -9999em;
     margin-top: -25px;
     opacity: 0;
-    -webkit-transition: all 0.2s;
-    -moz-transition: all 0.2s;
     transition: all 0.2s;
     &.play_button {}
     &:hover {
