--- a/scss/themes/_base.scss
+++ b/scss/themes/_base.scss
@@ -4,7 +4,7 @@
 .box_skitter {
   .focus_button, .next_button, .prev_button, .play_pause_button {
     display: block;
-    background: url('../images/sprite-default.png') no-repeat;
+    background: url('images/sprite-default.png') no-repeat;
   }
   .next_button {
     background-position: -0px -42px;
