--- a/scss/themes/_square.scss
+++ b/scss/themes/_square.scss
@@ -35,19 +35,19 @@
     background-position: -0px -55px;
     width: 55px;
     height: 55px;
-    top: auto;
+    top: 10px;
     left: auto;
-    bottom: 10px;
     right: 10px;
+    margin: 0;
   }
   .prev_button {
     background-position: -0px -110px;
     width: 55px;
     height: 55px;
-    top: auto;
+    top: 10px;
     left: auto;
-    bottom: 10px;
     right: 65px;
+    margin: 0;
   }
   .info_slide {
     background-color: transparent;
